--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "truffle-flattener": "^1.5.0",
-    "web3": "1.0.0-beta.55"
+    "web3": "1.0.0-beta.55",
+    "ganache-cli": "6.12.2"
   },
   "scripts": {
     "start": "react-scripts start",
